# StudyProgramming

./: README.md
Python/: mixin.py
Rust/mandelbrot/: Cargo.toml
Rust/reqwest_sample/: Cargo.toml
Rust/sample_gnuplot/: Cargo.toml
