[package]
name = "reqwest_sample"
version = "0.1.0"
authors = ["ShataKurashi <soccer.271828.339@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "1.8", features = ["full"] }
